Fix alignment of main header in two column layout

--- a/frontend/src/app/shared/page-template/page-template.component.scss
+++ b/frontend/src/app/shared/page-template/page-template.component.scss
@@ -55,7 +55,7 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
-  align-self: flex-start;
+  align-items: flex-start;
 }
 
 .main-header {
